--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -13,11 +13,13 @@ div#aboutMe img{
     display: flex;
     border-radius: 4%;
     width: 15%;
+    padding-right: 15px;
 }
 
 div#aboutMe p{
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    text-align: left;
+    text-indent: 5%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
     line-height: 1.2;
 }
