All pages added with a framework for content to be added
These are all of the pages that will definitely be included by project close. I am pushing them now so you guys can look at it, claim a section and start to work whenever you are ready.

--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -1,7 +1,9 @@
 @charset "utf-8";
 
+
 div#aboutMe{
     display: flex;
+    margin: 2%;
     padding: 20px;
     border-radius: 15px;
     background-color: bisque;
@@ -15,6 +17,7 @@ div#aboutMe img{
     width: 15%;
     padding-right: 15px;
 }
+
 
 div#aboutMe p{
     text-align: left;
