--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -4,19 +4,33 @@
 
 html{
     height:100%;
-    background-image: url(/Images/waterBackground.jpg);
+    background-image: url(../Images/waterBackground.jpg);
     background-size:cover;
 }
 
-header{
-    position: sticky;
-    top:0;
-}
 
 body{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+header{
+    position: sticky;
+    background-color: bisque;
+}
+
+.navigation ul li{
+    display: inline;
+}
+
+.navigation ul li a{
+    display: inline-block;
+    padding: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    text-decoration: none;
+    text-align: center;
 }
 
 footer{
