--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -1,7 +1,81 @@
 @charset "utf-8";
 
 
+div#carousel{
+    display: -webkit-flex;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height:400px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: bisque;
+    box-shadow: rgb(51, 51, 51) 15px 0px 25px,
+                rgb(51, 51, 51) -15px 0px 25px;
+}
+
+.slides{
+    display: none;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.slides img{
+    width: 1200px;
+    position: relative;
+    top: -50%;
+}
+
+.prev, .next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding:16px;
+    font-weight: bold;
+    font-size: 18px;
+    color: white;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next{
+    right: 14%;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.slides p{
+    background-color: rgba(0,0,0,0.5);
+    color: antiquewhite;
+    position: absolute;
+    bottom: 10px;
+    left: 5%;
+    width: 90%;
+    height:max-content;
+    border-radius: 2px;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 8px 8px;
+    text-align: center;
+}
+
+.slides p a{
+    background-color: rgb(16, 163, 121);
+    color: antiquewhite;
+    padding: 0 1%;
+    border-radius: 5px;
+}
+
 div#aboutMe{
+    display: -webkit-flex;
     display: flex;
     margin: 2%;
     padding: 20px;
@@ -12,7 +86,6 @@ div#aboutMe{
 }
 
 div#aboutMe img{
-    display: flex;
     border-radius: 4%;
     width: 15%;
     padding-right: 15px;
