--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -28,29 +28,6 @@ div#carousel{
     top: -50%;
 }
 
-.prev, .next{
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding:16px;
-    font-weight: bold;
-    font-size: 18px;
-    color: white;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-.next{
-    right: 14%;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-}
 
 .slides p{
     background-color: rgba(0,0,0,0.5);
@@ -86,11 +63,15 @@ div#aboutMe{
 }
 
 div#aboutMe img{
-    border-radius: 4%;
-    width: 15%;
+    width: 16%;
+    object-fit: contain;
     padding-right: 15px;
 }
 
+div#aboutMe h1{
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 div#aboutMe p{
     text-align: left;
@@ -98,4 +79,29 @@ div#aboutMe p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     line-height: 1.2;
+}
+
+@media (width < 800px){
+    div#aboutMe{
+        display: block;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    div#aboutMe img{
+        width: 80%;
+        object-fit: contain;
+        padding: 15px;
+    }
+
+    div#aboutMe p{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 15px;
+        line-height: 1.2;
+    }
+
+    div#aboutMe h1{
+        font-size: 20px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
 }
