--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -36,7 +36,7 @@ header{
 .navigation ul li a{
     display: inline-block;
     padding: 10px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
     font-size: 25px;
     text-decoration: none;
     text-align: center;
