--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -42,6 +42,17 @@ header{
     text-align: center;
 }
 
+.alert{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding: 10px;
+    background: rgba(172, 20, 20, 0.75);
+    color: white;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+}
+
 footer{
     width: 100%;
     left:0;
