--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: Poppins;
-    src: url(Fonts/Poppins-Regular.ttf) format('truetype');
+    src: url(fonts/Poppins-Regular.ttf) format('truetype');
 }
 
 html {
     height:100%;
-    background-image: url(../Images/waterBackground.jpg);
+    background-image: url(../images/waterBackground.jpg);
     background-size:cover;
 }
 
