--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -57,6 +57,12 @@ header {
     font-size: 30px;
 }
 
+img{
+    width: 100%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
 footer {
     width: 100%;
     left:0;
