--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -2,48 +2,78 @@
 
 /* Base styling - This should be applied on all pages for cohesiveness */
 
+
+
+/* Font Imports */
+
 @font-face {
     font-family: Poppins;
     src: url(Fonts/Poppins-Regular.ttf) format('truetype');
 }
 
+/* HTML and Body Styles */
+
 html {
-    height:100%;
     background-image: url(../Images/waterBackground.jpg);
-    background-size:cover;
+    background-size: cover;
+    height: 100%;
 }
 
+body {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+}
+ 
+header, footer {
+    width: 100%;
+}
+
+/* Reset, do not touch! */
+
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
+/* Updated Navigation Styles */
+
+.navbar {
+    background-color: #FAF9F6;
+    padding: 0 20px;
+    clear: both;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-list li {
+    padding: 15px 20px;
+    line-height: 1.2em;
+}
+
+.nav-list a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    font-weight: 400px;
+    font-family: Poppins, Verdana, Geneva, sans-serif;   
+}
+
+a#currentPage {
+    color: #DBA845;
+}
+
 
 .main {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-}
-
-header {
-    position: sticky;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: bisque;
-    box-shadow: rgb(51, 51, 51) 15px 0px 25px,
-                rgb(51, 51, 51) -15px 0px 25px;
-}
-
-.navigation ul li {
-    display: inline;
-}
-
-.navigation ul li a {
-    display: inline-block;
-    padding: 10px;
-    font-family: Poppins, Verdana, Geneva, sans-serif;    
-    font-size: 25px;
-    text-decoration: none;
-    text-align: center;
 }
 
 .alert {
@@ -57,7 +87,7 @@ header {
     font-size: 30px;
 }
 
-img{
+img:not(#navicon) {
     width: 100%;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -74,9 +104,8 @@ footer {
     background-color: darkslategrey;
 }
 
-@media (width < 800px) {
-    header {
-        position: unset;
-        width:100%;
-    }
+/* Moble Devices up to 480px */
+
+@media only screen and (max-width: 480px) {
+    
 }
