--- a/Styles/galleryLayout.css
+++ b/Styles/galleryLayout.css
@@ -13,7 +13,7 @@
 }
 
 .displayBox {
-    background-color: bisque;
+    background-color: #FAF9F6;
     padding: 0 6px;
     margin: 5px;
     border-radius: 25px;
@@ -22,7 +22,7 @@
 }
 
 .displayBox:hover {
-    background-color: rgb(225, 194, 156);
+    background-color: #F1EDE4;
 }
 
 .galleryArt img {
