--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -10,7 +10,7 @@ div#carousel {
     margin-bottom: 2%;
     padding: 10px;
     border-radius: 15px;
-    background-color: bisque;
+    background-color: #FAF9F6;
     box-shadow: rgb(51, 51, 51) 15px 0px 25px,
                 rgb(51, 51, 51) -15px 0px 25px;
 }
@@ -27,10 +27,9 @@ div#carousel {
     top: -50%;
 }
 
-
 .slides p {
     background-color: rgba(0,0,0,0.5);
-    color: antiquewhite;
+    color: white;
     position: absolute;
     bottom: 10px;
     left: 5%;
@@ -56,7 +55,7 @@ div#aboutMe {
     margin: 2%;
     padding: 20px;
     border-radius: 15px;
-    background-color: bisque;
+    background-color: #FAF9F6;
     box-shadow: rgb(51, 51, 51) 15px 0px 25px,
                 rgb(51, 51, 51) -15px 0px 25px;
 }
