--- a/Styles/resetStyles.css
+++ b/Styles/resetStyles.css
@@ -7,15 +7,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
    margin: 0; 
    padding: 0; 
    border: 0; 
-   font-size: 100%; 
    font: inherit; 
+   font-size: 100%; 
    vertical-align: baseline;
-   background: transparent;
 } 
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { 
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section { 
    display: block;
 }
+
+/* Set the default page element styles */
 
 body { 
    line-height: 1;
@@ -26,7 +27,7 @@ ol, ul {
 }
 
 blockquote, q {
-    quotes: none;
+   quotes: none;
 }
 
 blockquote:before, blockquote:after, q:before, q:after { 
@@ -37,4 +38,13 @@ blockquote:before, blockquote:after, q:before, q:after {
 table { 
    border-collapse: collapse; 
    border-spacing: 0;
+}
+
+nav ul {
+   list-style: none;
+   list-style-image: none;
+}
+
+nav a {
+   text-decoration: none;
 }
