--- a/Styles/galleryLayout.css
+++ b/Styles/galleryLayout.css
@@ -13,7 +13,7 @@
 }
 
 .displayBox {
-    background-color: #FAF9F6;
+    background-color: #F8FEF2;
     padding: 0 6px;
     margin: 5px;
     border-radius: 25px;
