--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -103,6 +103,26 @@ nav.navbar a:hover, nav.navbar a:active {
     font-size: 30px;
 }
 
+div#contactInfo{
+    margin: 2%;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    background-color: #F8FEF2;
+    box-shadow: rgb(51, 51, 51) 15px 0px 25px,
+                rgb(51, 51, 51) -15px 0px 25px;
+}
+
+div#contactInfo h1{
+    font-size: 40px;
+}
+
+div#contactInfo a img{
+    display: inline-flexbox;
+    margin: 3%;
+    width: 10%;
+}
+
 /*for class divs */
 #year2025,
 #year2024 {
